<resources>
    <string name="app_name">KreaSport</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="auth0_client_id">0FlTsCGzAeTXuCOeJmAutqEJyuBKAhzU</string>
    <string name="auth0_domain">caroni.eu.auth0.com</string>
    <string name="app_name_caps">KREASPORT</string>
    <string name="fragment_home_button_download_from_key">Download race</string>
    <string name="fragment_home_private_key_hint">Enter a race key</string>
    <string name="fragment_home_private_key_error">Not a race key</string>
    <string name="fragment_home_tv_no_private_key">Don\'t have a private key? Download all public races</string>
    <string name="download_fail_title">Download failed</string>
    <string name="download_fail_description">Could not connect to the server</string>
    <string name="download_private_race_message">Downloading private realmRace…</string>
    <string name="download_public_race_message">Downloading public races…</string>
    <string name="no_race_found_public">There are no public races available</string>
    <string name="no_race_found_private">There is no realmRace associated with this key</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Explore your surroundings</string>
    <string name="slide_1_desc">Choose your own path with public races available to everyone or get a key to unlock a private race</string>
    <string name="slide_2_title">Competitive rankings</string>
    <string name="slide_2_desc">Race in competitive mode and compare your times with others</string>
    <string name="slide_3_title">Offline maps</string>
    <string name="slide_3_desc">Download maps beforehand so you don\'t have to worry about your mobile data usage</string>
    <string name="slide_4_title">Grant write access</string>
    <string name="slide_4_desc">We need to be able to have somewhere to store the maps (even temporarily)</string>
    <string name="slide_5_title">Grant location access</string>
    <string name="slide_5_desc">We need to access your location to verify you have reached a control point</string>
    <string name="slide_6_title">Ready to go!</string>
    <string name="slide_6_desc">The setup is finished. Go smash those leaderboards!</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="grant">GRANT</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_scrolling_again">ScrollingActivityAgain</string>
    <string name="title_activity_downloaded_races">DownloadedRacesActivity</string>
    <string name="title_activity_riddle">RiddleActivity</string>
    <string name="title_activity_my_records">MyRecordsActivity</string>
    <string name="title_activity_offline_area_selection">OfflineAreaSelection</string>
    <string name="offline_area_selection_notification_start" formatted="false">Starting download for %s</string>
    <string name="offline_area_selection_notification_success" formatted="false">Finished download for %s</string>
    <string name="offline_area_selection_notification_ongoing" formatted="false">Downloading: %d tiles out of %d</string>
    <string name="offline_area_selection_notification_error" formatted="false">Error downloading %s</string>
    <string name="title_activity_offline_areas">OfflineAreasActivity</string>
    <string name="title_activity_dummy">Download this area?</string>
    <string name="offline_areas_pre_downloaded_areas_title">Downloaded areas:</string>
    <string name="offline_areas_button_download_custom_area">Download a custom area</string>
    <string name="title_activity_downloaded_area">DownloadedAreaActivity</string>
    <string name="downloaded_area_description" formatted="false">%s ● Downloaded %s</string>
    <string name="number_records_title">Number of records: %d</string>
    <string name="title_activity_record">RecordActivity</string>
    <string name="record_date">Date: %s</string>
    <string name="record_id">Record id: %s</string>
</resources>