<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/fragment_home_root_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:paddingBottom="32dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingTop="32dp"
        android:theme="@style/AppTheme.Dark">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_kreasport_logo_no_bg"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel">


                <EditText
                    android:id="@+id/fragment_home_et_key"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fragment_home_private_key_hint"
                    android:textSize="18sp"/>

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/fragment_home_button_download_from_key"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
                android:padding="12dp"
                android:text="@string/fragment_home_button_download_from_key"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/fragment_home_tv_download_public_races"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/fragment_home_tv_no_private_key"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16dip"/>

        </LinearLayout>

    </LinearLayout>
</layout>